--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,4 +1,4 @@
-{% extends "users/base.html" %}
+{% extends "mailing/base.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
 
@@ -7,7 +7,6 @@
 
 <main class="form-signin w-100 m-auto">
   <form method='post'>
-    <h1 class="h3 mb-3 fw-normal">Настройки профиля</h1>
     {% csrf_token %}
 
     {{ form|crispy }}
