--- a/main/templates/main/includes/inc_header.html
+++ b/main/templates/main/includes/inc_header.html
@@ -1,23 +1,31 @@
 <header class="mb-auto">
     <div>
-      <h3 class="float-md-start mb-0 text-muted">
-        <a href="{% url 'main:main' %} " class="float-md-start mb-0 text-secondary">РАЗОШЛИ</a>
-    </h3>
-    
+        <h3 class="float-md-start mb-0 text-muted">
+            <a href="{% url 'main:main' %} " class="float-md-start mb-0 text-secondary">{{ site_name }}</a>
+        </h3>
 
-      <nav class="nav nav-masthead justify-content-center float-md-end">
-        {% if user.is_authenticated %}
-            <a class="nav-link fw-bold py-1 px-0" href="{% url "mailing:create_message" %}">Создать рассылку</a>
-            <a class="nav-link fw-bold py-1 px-0" href="{% url "mailing:statistics" %}">Статистика</a>
-            <a class="nav-link fw-bold py-1 px-0" href="{% url "users:profile" %}">Настройки</a>
-            <a class="nav-link fw-bold py-1 px-0" href="{% url "users:logout" %}">Выйти</a>
-            {% if user.is_staff %}
-                <a class="nav-link fw-bold py-1 px-0 action" href="http://127.0.0.1:8000/admin">ADMIN</a>
+        <nav class="nav nav-masthead justify-content-center float-md-end">
+            {% if user.is_authenticated %}
+                {% if perms.mailing.view_setting %}
+                    <a class="nav-link fw-bold py-1 px-0" href="{% url "mailing:manage_settings" %}">Рассылки</a>
+                {% endif %}
+
+                {% if perms.blog.view_blog %}
+                    <a class="nav-link fw-bold py-1 px-0" href="{% url "blog:list" %}">Блог</a>
+                {% endif %}
+                
+                <a class="nav-link fw-bold py-1 px-0" href="{% url "users:profile" %}">Профиль</a>
+                <a class="nav-link fw-bold py-1 px-0" href="{% url "users:logout" %}">Выйти</a>
+                
+                {% if user.is_staff %}
+                    <a class="nav-link fw-bold py-1 px-0 action" href="/admin">Admin</a>
+                {% endif %}
+                
+            {% else %}
+                <a class="nav-link fw-bold py-1 px-0" href="{% url "users:login" %}">Войти</a>
+                <a class="nav-link fw-bold py-1 px-0" href="{% url "users:register" %}">Регистрация</a>
             {% endif %}
-        {% else %}
-            <a class="nav-link fw-bold py-1 px-0" href="{% url "users:login" %}">Войти</a>
-            <a class="nav-link fw-bold py-1 px-0" href="{% url "users:register" %}">Регистрация</a>
-        {% endif %}
-      </nav>
+        </nav>
+
     </div>
-  </header>
+</header>
